--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
+URL: https://github.com/josedv82/matuR
+BugReports: https://github.com/josedv82/matuR/issues
